--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -7,14 +7,23 @@
     }
   },
   "ServerSettings": {
+    // 固定值，无需变动
     "BindAddr": "0.0.0.0",
+
+    // 通信端口
     "BindPort": 2271,
 
     // 自定义域名
-    "Domain": "sd.suidao.io",
+    // A类型解析 *.sd.test.cc 至当前服务器所在ip
+    // 根据需要可增加减少子域名的级别
+    "Domain": "sd.test.cc",
 
     // 服务监听的端口号, 访问自定义域名站点时url为 http://{SubDomain}.{Domain}:{ProxyPort_HTTP}/
     "ProxyPort_HTTP": 2270,
+
+    // 表示当前服务器通过nginx反向代理将 *.Domain下所有请求转发至 ProxyPort_HTTP 端口
+    // 从而访问web站点时无需加端口
+    // 仅仅提示客户端访问地址无需使用端口号
     "HasNginxProxy": true
   }
 }
