--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Error"
     }
@@ -19,7 +19,7 @@
     "Domain": "sd.test.cc",
 
     // 服务监听的端口号, 访问自定义域名站点时url为 http://{SubDomain}.{Domain}:{ProxyPort_HTTP}/
-    "ProxyPort_HTTP": 2270,
+    "WebProxyPort": 2270,
 
     // 表示当前服务器通过nginx反向代理将 *.Domain下所有请求转发至 ProxyPort_HTTP 端口
     // 从而访问web站点时无需加端口
