--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -16,7 +16,7 @@
     // 自定义域名
     // A类型解析 *.sd.test.cc 至当前服务器所在ip
     // 根据需要可增加减少子域名的级别
-    "Domain": "sd.test.cc",
+    "WebDomain": "sd.test.cc",
 
     // 服务监听的端口号, 访问自定义域名站点时url为 http://{SubDomain}.{Domain}:{ProxyPort_HTTP}/
     "WebProxyPort": 2270,
