--- a/src/SuiDao.Server/SuiDao.Server.csproj
+++ b/src/SuiDao.Server/SuiDao.Server.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>6c26275d-e2b9-4139-a5ce-852b373ca75d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastTunnel.Core" Version="1.0.21" />
+    <PackageReference Include="FastTunnel.Core" Version="1.0.22" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.4" />
   </ItemGroup>
 
