upgrade fasttunnel.core 1.0.23 & .net core 5

--- a/src/SuiDao.Client/SuiDao.Client.csproj
+++ b/src/SuiDao.Client/SuiDao.Client.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastTunnel.Core" Version="1.0.22" />
-    <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="FastTunnel.Core" Version="1.0.23" />
   </ItemGroup>
 
 </Project>
