--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -24,6 +24,6 @@
     // 表示当前服务器通过nginx反向代理将 *.Domain下所有请求转发至 ProxyPort_HTTP 端口
     // 从而访问web站点时无需加端口
     // 仅仅提示客户端访问地址无需使用端口号
-    "HasNginxProxy": true
+    "WebHasNginxProxy": true
   }
 }
