--- a/src/SuiDao.Client/SuiDao.Client.csproj
+++ b/src/SuiDao.Client/SuiDao.Client.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <SignAssembly>false</SignAssembly>
+    <AssemblyOriginatorKeyFile>FastTunnel.pfx</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
