--- a/src/SuiDao.Server/SuiDao.Server.csproj
+++ b/src/SuiDao.Server/SuiDao.Server.csproj
@@ -6,14 +6,12 @@
     <UserSecretsId>6c26275d-e2b9-4139-a5ce-852b373ca75d</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="nlog.config" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\SuiDao.Client\HttpHelper.cs" Link="HttpHelper.cs" />
-    <Compile Include="..\SuiDao.Client\Models\LogInByKeyMassage.cs" Link="Model\LogInByKeyMassage.cs" />
-    <Compile Include="..\SuiDao.Client\SuiDaoApi.cs" Link="SuiDaoApi.cs" />
+    <Content Remove="nlog.config" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,9 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastTunnel.Core" Version="1.0.23" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.6.5" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
+    <PackageReference Include="FastTunnel.Core" Version="1.1.1" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\SuiDao.Core\SuiDao.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
