--- a/src/SuiDao.Client/SuiDao.Client.csproj
+++ b/src/SuiDao.Client/SuiDao.Client.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>FastTunnel.pfx</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastTunnel.Core" Version="1.1.1" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FastTunnel\FastTunnel.Core\FastTunnel.Core.csproj" />
     <ProjectReference Include="..\SuiDao.Core\SuiDao.Core.csproj" />
   </ItemGroup>
 
