--- a/src/SuiDao.Core/SuiDao.Core.csproj
+++ b/src/SuiDao.Core/SuiDao.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastTunnel.Core" Version="1.1.1" />
+    <ProjectReference Include="..\..\..\FastTunnel\FastTunnel.Core\FastTunnel.Core.csproj" />
   </ItemGroup>
 
 </Project>
