--- a/src/SuiDao.Server/log4net.config
+++ b/src/SuiDao.Server/log4net.config
@@ -61,7 +61,8 @@
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <!-- Only ERROR and FATAL log messages end up in this target, even if child loggers accept lower priority. -->
-      <levelMin value="ERROR" />
+      <param name="LevelMin" value="Info"/>
+      <param name="LevelMax" value="Fatal"/>
     </filter>
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %logger - %P{Tenant} - %message [%P{Url}]%newline" />
