--- a/src/SuiDao.Server/log4net.config
+++ b/src/SuiDao.Server/log4net.config
@@ -61,7 +61,7 @@
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <!-- Only ERROR and FATAL log messages end up in this target, even if child loggers accept lower priority. -->
-      <param name="LevelMin" value="Info"/>
+      <param name="LevelMin" value="Error"/>
       <param name="LevelMax" value="Fatal"/>
     </filter>
     <layout type="log4net.Layout.PatternLayout">
