--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /src/SuiDao.Client/Properties/PublishProfiles/FolderProfile.pubxml.user
 /src/SuiDao.Server/Properties/PublishProfiles/*.user
 /src/SuiDao.Server/Properties/PublishProfiles
+/src/SuiDao.Server/Logs
