--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -1,29 +1,20 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Error"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
+  "urls": "http://*:2271;", // Http&客户端通讯端口
   "ServerSettings": {
-    // 固定值，无需变动
-    "BindAddr": "0.0.0.0",
-
-    // 通信端口
-    "BindPort": 2271,
-
     // 自定义域名
     // A类型解析 *.sd.test.cc 至当前服务器所在ip
     // 根据需要可增加减少子域名的级别
     "WebDomain": "sd.test.cc",
 
-    // 服务监听的端口号, 访问自定义域名站点时url为 http://{SubDomain}.{Domain}:{ProxyPort_HTTP}/
-    "WebProxyPort": 2270,
-
-    // 表示当前服务器通过nginx反向代理将 *.Domain下所有请求转发至 ProxyPort_HTTP 端口
-    // 从而访问web站点时无需加端口
-    // 仅仅提示客户端访问地址无需使用端口号
-    "WebHasNginxProxy": true
+    // 可选，是否开启SSH，禁用后不处理Forward类型端口转发.默认false。
+    "EnableForward": true
   }
 }
