--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -12,7 +12,7 @@
     // 自定义域名
     // A类型解析 *.sd.test.cc 至当前服务器所在ip
     // 根据需要可增加减少子域名的级别
-    "WebDomain": "sd.test.cc",
+    "WebDomain": "sh1.k9s.run",
 
     // 可选，是否开启SSH，禁用后不处理Forward类型端口转发.默认false。
     "EnableForward": true
