--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -8,13 +8,32 @@
   },
   "AllowedHosts": "*",
   "urls": "http://*:2271;", // Http&客户端通讯端口
-  "ServerSettings": {
+  "FastTunnel": {
     // 自定义域名
     // A类型解析 *.sd.test.cc 至当前服务器所在ip
     // 根据需要可增加减少子域名的级别
     "WebDomain": "sh1.k9s.run",
 
     // 可选，是否开启SSH，禁用后不处理Forward类型端口转发.默认false。
-    "EnableForward": true
+    "EnableForward": true,
+
+    /**
+    * 访问api接口的JWT配置
+    */
+    "Api": {
+      "JWT": {
+        "ClockSkew": 10,
+        "ValidAudience": "https://suidao.io",
+        "ValidIssuer": "FastTunnel",
+        "IssuerSigningKey": "This is IssuerSigningKey",
+        "Expires": 120
+      },
+      "Accounts": [
+        {
+          "Name": "admin",
+          "Password": "admin123"
+        }
+      ]
+    }
   }
 }
