--- a/src/SuiDao.Core/SuiDao.Core.csproj
+++ b/src/SuiDao.Core/SuiDao.Core.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\FastTunnel\FastTunnel.Core\FastTunnel.Core.csproj" />
+    <PackageReference Include="FastTunnel.Core" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
