--- a/src/SuiDao.Server/appsettings.json
+++ b/src/SuiDao.Server/appsettings.json
@@ -1,10 +1,23 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Yarp.ReverseProxy": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.log",
+          "rollingInterval": 3
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "urls": "http://*:2271;", // Http&客户端通讯端口
